loading screen text colour

--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
         </div>
         <div class="title" id="h1">Music</div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3KVUsNUmJc2?utm_source=generator&theme=0" loading="lazy"></iframe>
+        <div class="spotify-embed">
+            <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3KVUsNUmJc2?utm_source=generator&theme=0" 
+                    allow="encrypted-media" 
+                    loading="lazy">
+            </iframe>
+        </div>
     </div>
 </div>
     
