--- a/index.html
+++ b/index.html
@@ -161,6 +161,31 @@
     </div>
 
 
+    <footer>
+        <div class="content">
+            <div class="des">
+                Rights Reserved
+            </div>
+            <div class="links">
+                <a href="index.html">
+                    Home
+                </a>
+                <a href="character.html">
+                    About
+                </a>
+                <a href="#">
+                    Gallery
+                </a>
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832596/original_0bcfe2c4f4f02539969a327b9af4cccb.png?1744076514?bc=0" alt="Riot Games">
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832594/original_0b5e3e89c2674a79a1b2b809d9342340.png?1744076514?bc=0" alt="Netflix">
+            </div>
+        </div>
+    </footer>
+
     <script src="arcane-2.js"></script>
 </body>
 </html>
