starting new page - footer text edit

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="topic" id="h5">
                 <a href="index.html"><span>Home</span></a>
             </div>
-            <div class="topic" id="h5"><a href="#">About</a></div>
+            <div class="topic" id="h5"><a href="character.html">About</a></div>
             <div class="topic" id="h5">
                 <a href="#">Gallery</a>
             </div>
@@ -169,7 +169,7 @@
             <div class="des">
                 © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
             </div>
-            <div class="links">
+            <div class="links" id="h5">
                 <a href="index.html">
                     <span>Home</span>
                 </a>
