--- a/character.html
+++ b/character.html
@@ -46,7 +46,7 @@
             <div class="topic" id="h5">
                 <a href="index.html">Home</a>
             </div>
-            <div class="topic" id="h5"><a href="#"><span>About</span></a></div>
+            <div class="topic" id="h5"><a href="character.html"><span>About</span></a></div>
             <div class="topic" id="h5">
                 <a href="#">Gallery</a>
             </div>
@@ -55,20 +55,58 @@
 
     <div class="nav-spacer"></div>
 
-<!-- Your page content starts here -->
-
-    <div class="BG-img">
-        <div class="front-cover">
-            <div class="topic-row">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
-                <div class="topic" id="h4">Music Created for Arcane</div>
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+    <!-- front cover -->
+    <div class="front-cover">
+        <div class="BG-img">
+            <div class="content">
+                <div class="topic-row">
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+                    <div class="topic" id="h4">About the creation of Arcane</div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+                </div>
+                <div class="topic" id="h1">
+                    How they did it
+                </div>
             </div>
         </div>
     </div>
 
     <!-- character -->
 
+
+
+
+
+
+
+
+    <footer>
+        <div class="content">
+            <div class="des" id="show-des">
+                © 2025 Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="des">
+                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="links" id="h5">
+                <a href="index.html">
+                    Home
+                </a>
+                <a href="character.html">
+                    <span>About</span>
+                </a>
+                <a href="#">
+                    Gallery
+                </a>
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832596/original_0bcfe2c4f4f02539969a327b9af4cccb.png?1744076514?bc=0" alt="Riot Games">
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832594/original_0b5e3e89c2674a79a1b2b809d9342340.png?1744076514?bc=0" alt="Netflix">
+            </div>
+        </div>
+    </footer>
 </body>
 
 <script src="chtr.js"></script>
