--- a/character.html
+++ b/character.html
@@ -57,22 +57,80 @@
 
     <!-- front cover -->
     <div class="front-cover">
-        <div class="BG-img">
-            <div class="content">
-                <div class="topic-row">
+        <div class="BG-img"></div>
+        <div class="img-one"></div>
+        <div class="content">
+            <div class="topic-row">
                     <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
                     <div class="topic" id="h4">About the creation of Arcane</div>
                     <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
-                </div>
-                <div class="topic" id="h1">
-                    How they did it
-                </div>
+            </div>
+            <div class="topic" id="h1">
+                How they did it
+            </div>
+            <div class="des" id="medium-body">
+                Storyline, character creation and arc. 
             </div>
         </div>
     </div>
 
-    <!-- character -->
+    <div class="line-break"></div>
 
+    <!-- story -->
+    <div class="story">
+        <div class="BG-img"></div>
+        <div class="content">
+            <div class="topic-row">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+                <div class="topic" id="h4">Starting with the storyline</div>
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+            </div>
+            <div class="title" id="h1">
+                Arcane Story
+            </div>
+            <div class="title" id="h1">
+                Story
+            </div>
+            <div class="carousel">
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910952/original_7ebb2617b527012f71bf19cf2f53f1bf.png?1744339313?bc=0" alt="Season1-Act1">
+                </div>
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910951/original_531bc28457b735280d75355749ece745.png?1744339312?bc=0" alt="Season1-Act2">
+                </div>
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="Season1-Act3">
+                </div>
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910953/original_c449d809860ccba50ee09290a27417d3.png?1744339314?bc=0" alt="Season2-Act1">
+                </div>
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910953/original_c449d809860ccba50ee09290a27417d3.png?1744339314?bc=0" alt="Season2-Act2">
+                </div>
+                <div class="slide">
+                    <div class="des" id="medium-body">
+                        ARCANE tells the story of the Zaunites who want a better life, the people's struggle to get it, and whether Zaun and Piltover can unite once more against a common threat beyond their walls.
+                    </div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910953/original_c449d809860ccba50ee09290a27417d3.png?1744339314?bc=0" alt="Season2-Act3">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
