removed two background imgs

--- a/index.html
+++ b/index.html
@@ -100,15 +100,18 @@
     </div>
 
     <!-- about -->
-     <div class="about-BG-img">
-        <div class="about">
-            <div class="content" id="about-section">
-                <div class="title" id="h1">About</div>
-                <div class="des" id="medium-body">
-                    You can watch Arcane on Netflix. It is a TV show that is animated inspired by the video game League of Legends.
-                </div>
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690533/original_bc29b9b26038d0658fb69bddaa58e13f.png?1743548988?bc=0">
+    <div class="about">
+        <div class="topic-row">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+            <div class="topic" id="h4">What is Arcane?</div>
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+        </div>
+        <div class="content" id="about-section">
+            <div class="title" id="h1">About</div>
+            <div class="des" id="medium-body">
+                You can watch Arcane on Netflix. It is a TV show that is animated inspired by the video game League of Legends.
             </div>
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690533/original_bc29b9b26038d0658fb69bddaa58e13f.png?1743548988?bc=0">
         </div>
     </div>
 
@@ -135,7 +138,6 @@
     
     <!-- videos/content -->
     <div class="showcase">
-        <div class="showcase-BG-img"></div>
         <div class="content">
             <div class="topic-row">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
