--- a/character.html
+++ b/character.html
@@ -181,6 +181,7 @@
         </div>
       </div>
 
+      <div class="line-break"></div>
 
       <div class="creation">
         <div class="content">
