added Gallery pages

--- a/character.html
+++ b/character.html
@@ -20,7 +20,7 @@
             </a>
             <a href="index.html" id="h5">Home</a>
             <a href="character.html" id="h5"><span>About</span></a>
-            <a href="#" id="h5">Gallery</a>
+            <a href="gallery.html" id="h5">Gallery</a>
         </div>
     </div>
 
@@ -48,7 +48,7 @@
             </div>
             <div class="topic" id="h5"><a href="character.html"><span>About</span></a></div>
             <div class="topic" id="h5">
-                <a href="#">Gallery</a>
+                <a href="gallery.html">Gallery</a>
             </div>
         </div>
     </div>
@@ -185,12 +185,15 @@
           <div class="topic-row">
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
             <div class="topic" id="h4">
-                Secondly,
+                Character
             </div>
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
           </div>
           <div class="title" id="h1">
             Character creation
+          </div>
+          <div class="des" id="h1">
+            Not FINISHED YET
           </div>
             <div class="create-img">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910953/original_c449d809860ccba50ee09290a27417d3.png?1744339314?bc=0" alt="">
