--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
             <a href="index.html" id="h5"><span>Home</span></a>
             <a href="character.html" id="h5">About</a>
-            <a href="#" id="h5">Gallery</a>
+            <a href="gallery.html" id="h5">Gallery</a>
         </div>
     </div>
 
@@ -64,7 +64,7 @@
             </div>
             <div class="topic" id="h5"><a href="character.html">About</a></div>
             <div class="topic" id="h5">
-                <a href="#">Gallery</a>
+                <a href="gallery.html">Gallery</a>
             </div>
         </div>
     </div>
