--- a/gallery.html
+++ b/gallery.html
@@ -62,14 +62,14 @@
         <div class="content">
             <div class="topic-row">
                     <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
-                    <div class="topic" id="h4">About the creation of Arcane</div>
+                    <div class="topic" id="h4">Gallery</div>
                     <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
             </div>
             <div class="topic" id="h1">
-                How they did it
+                Gallery
             </div>
             <div class="des" id="medium-body">
-                Storyline, character creation and arc. 
+                Will have images from the TV show. 
             </div>
         </div>
     </div>
