adding to Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,15 @@
     </div>
 
     <div class="line-break"></div>
+
+    <!-- image table -->
+     <div class="image-table">
+        <div class="box">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
+        </div>
+     </div>
 </body>
 
 <script src="gallery.js"></script>
