--- a/gallery.html
+++ b/gallery.html
@@ -82,8 +82,42 @@
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
             <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36344327/original_266443b6dca7904f9648f54713ee6f70.png?1745966169?bc=0" alt="Vi" id="tall">
         </div>
      </div>
+
+
+
+
+
+
+     <footer>
+        <div class="content">
+            <div class="des" id="show-des">
+                © 2025 Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="des">
+                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="links" id="h5">
+                <a href="index.html">
+                    Home
+                </a>
+                <a href="character.html">
+                    <span>About</span>
+                </a>
+                <a href="#">
+                    Gallery
+                </a>
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832596/original_0bcfe2c4f4f02539969a327b9af4cccb.png?1744076514?bc=0" alt="Riot Games">
+            </div>
+            <div class="images-footer">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832594/original_0b5e3e89c2674a79a1b2b809d9342340.png?1744076514?bc=0" alt="Netflix">
+            </div>
+        </div>
+    </footer>
 </body>
 
 <script src="gallery.js"></script>
