--- a/gallery.html
+++ b/gallery.html
@@ -77,14 +77,39 @@
     <div class="line-break"></div>
 
     <!-- image table -->
-     <div class="image-table">
-        <div class="box">
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="">
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36344327/original_266443b6dca7904f9648f54713ee6f70.png?1745966169?bc=0" alt="Vi" id="tall">
-        </div>
-     </div>
+    <div class="image-table">
+        <div class="image-grid">
+            <div class="image-item size-3 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028102/original_5f1a20b43ab384ba22a3a3699cf22b48.png?1744782620?bc=0" alt="Image 1">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="Image 2">
+            </div>
+            <div class="image-item size-4 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910949/original_b198a74ae725cf1b56a65b8ad8445e50.png?1744339312?bc=0" alt="Image 3">
+            </div>
+            <div class="image-item size-2 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776200/original_69c1cf4e18a0238c838cd0601e71ce3e.png?1743811557?bc=0" alt="Image 4">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028096/original_b9062a8ec35c369ecd222fbad6008347.png?1744782609?bc=0" alt="Image 5">
+            </div>
+            <div class="image-item size-3 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776197/original_fdd791a0b20e3727c9a8ad17ee7f7a60.png?1743811552?bc=0" alt="Image 6">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910950/original_c1ef04628d347fd4f5ecc84db8acb1ed.png?1744339313?bc=0" alt="Image 7">
+            </div>
+            <div class="image-item size-2 width-3">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690525/original_c81fc7a8d7b17c8d4bdd7badeb0e8042.jpg?1743548959?bc=0" alt="Image 8">
+            </div>
+            <div class="image-item size-4 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690526/original_911021511bf22442ca33e14552d70e78.jpg?1743548960?bc=0" alt="Image 9">
+            </div>
+        </div>        
+    </div>
+
+
 
 
 
