added all imgs. line-break centered

--- a/gallery.html
+++ b/gallery.html
@@ -66,10 +66,10 @@
                     <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
             </div>
             <div class="topic" id="h1">
-                Gallery
+                Imagery from the world of Arcane
             </div>
             <div class="des" id="medium-body">
-                Will have images from the TV show. 
+                Snapshots from the TV show Arcane
             </div>
         </div>
     </div>
@@ -79,32 +79,84 @@
     <!-- image table -->
     <div class="image-table">
         <div class="image-grid">
-            <div class="image-item size-3 width-2">
+            <div class="image-item size-2 width-2">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028102/original_5f1a20b43ab384ba22a3a3699cf22b48.png?1744782620?bc=0" alt="Image 1">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="image-item size-4 width-1">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="Image 2">
             </div>
-            <div class="image-item size-4 width-1">
+            <div class="image-item size-1 width-1">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910949/original_b198a74ae725cf1b56a65b8ad8445e50.png?1744339312?bc=0" alt="Image 3">
             </div>
-            <div class="image-item size-2 width-2">
+            <div class="image-item size-3 width-2">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776200/original_69c1cf4e18a0238c838cd0601e71ce3e.png?1743811557?bc=0" alt="Image 4">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="image-item size-2 width-1">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028096/original_b9062a8ec35c369ecd222fbad6008347.png?1744782609?bc=0" alt="Image 5">
             </div>
             <div class="image-item size-3 width-1">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776197/original_fdd791a0b20e3727c9a8ad17ee7f7a60.png?1743811552?bc=0" alt="Image 6">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="image-item size-1 width-2">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910950/original_c1ef04628d347fd4f5ecc84db8acb1ed.png?1744339313?bc=0" alt="Image 7">
             </div>
-            <div class="image-item size-2 width-2">
+            <div class="image-item size-4 width-2">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690525/original_c81fc7a8d7b17c8d4bdd7badeb0e8042.jpg?1743548959?bc=0" alt="Image 8">
             </div>
-            <div class="image-item size-4 width-1">
+            <div class="image-item size-1 width-1">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690526/original_911021511bf22442ca33e14552d70e78.jpg?1743548960?bc=0" alt="Image 9">
+            </div>
+            <div class="image-item size-3 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776195/original_e7fa00e4d8db1625457f2e21742022fa.png?1743811550?bc=0" alt="Image 10">
+            </div>
+            <div class="image-item size-2 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690528/original_17275e9e65cf0fff144e05bb2a84c8fd.jpg?1743548964?bc=0" alt="Image 11">
+            </div>
+            <div class="image-item size-1 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690527/original_1c5d1b66702401d8dc5bc11170d27c58.png?1743548961?bc=0" alt="Image 12">
+            </div>
+            <div class="image-item size-4 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690524/original_74a5119156be3c469fb5b979a6f6614e.jpg?1743548959?bc=0" alt="Image 13">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353674/original_fb944e7b40e4641c8f224e5d705566e0.png?1746002947?bc=0" alt="Image 14">
+            </div>
+            <div class="image-item size-2 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353672/original_62365307ff7a8865725cf042f8401695.png?1746002945?bc=0" alt="Image 15">
+            </div>
+            <div class="image-item size-3 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353675/original_e933b1ce3cac067caf16012989f537b6.png?1746002952?bc=0" alt="Image 16">
+            </div>
+            <div class="image-item size-1 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353676/original_1dbef469b0fc8445b1cd9ddaf76450e1.png?1746002956?bc=0" alt="Image 17">
+            </div>
+            <div class="image-item size-3 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353678/original_da4c60351927a5bfcc332167084f8738.png?1746002961?bc=0" alt="Image 18">
+            </div>
+
+            <div class="image-item size-4 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353689/original_71843bb6ad3d4de72a380fb667a84fd1.png?1746002986?bc=0" alt="Image 19">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353698/original_34acd7493d96cbdd4f660d8368f708e8.png?1746003011?bc=0" alt="Image 20">
+            </div>
+            <div class="image-item size-2 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353688/original_7dd369fb9dbf408fedfceade30459a5a.png?1746002984?bc=0" alt="Image 21">
+            </div>
+            <div class="image-item size-3 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353692/original_731cf4c029031dd68261dfa7581bc206.png?1746002993?bc=0" alt="Image 22">
+            </div>
+            <div class="image-item size-1 width-2">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353697/original_401c5daebd4a1ee39dba1621eb0fa25c.png?1746003010?bc=0" alt="Image 23">
+            </div>
+            <div class="image-item size-4 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353695/original_65d57156666276244b22a7a37305e354.png?1746003006?bc=0" alt="Image 24">
+            </div>
+            <div class="image-item size-2 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353693/original_6227675d39b8c08f6c0ea9dfe6383fe5.png?1746002994?bc=0" alt="Image 25">
+            </div>
+            <div class="image-item size-1 width-1">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353686/original_bee07482c0f8936cc3aea75e1b6a2e80.png?1746002979?bc=0" alt="Image 26">
             </div>
         </div>        
     </div>
