image files shrunk

--- a/gallery.html
+++ b/gallery.html
@@ -119,44 +119,43 @@
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690524/original_74a5119156be3c469fb5b979a6f6614e.jpg?1743548959?bc=0" alt="Image 13">
             </div>
             <div class="image-item size-1 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353674/original_fb944e7b40e4641c8f224e5d705566e0.png?1746002947?bc=0" alt="Image 14">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354635/original_ed1fd3a7b1e429cf874a2f38c003ae46.jpg?1746006653?bc=0" alt="Image 14">
             </div>
             <div class="image-item size-2 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353672/original_62365307ff7a8865725cf042f8401695.png?1746002945?bc=0" alt="Image 15">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354631/original_8ce0452ff9640f8458e0cf36cd8f41bf.jpg?1746006652?bc=0" alt="Image 15">
             </div>
             <div class="image-item size-3 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353675/original_e933b1ce3cac067caf16012989f537b6.png?1746002952?bc=0" alt="Image 16">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354633/original_74cf8adf090544dc01e1b655219153f1.jpg?1746006652?bc=0" alt="Image 16">
             </div>
             <div class="image-item size-1 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353676/original_1dbef469b0fc8445b1cd9ddaf76450e1.png?1746002956?bc=0" alt="Image 17">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354634/original_4e9402b52cb49ff52e0fad38a75b8a1e.jpg?1746006652?bc=0" alt="Image 17">
             </div>
             <div class="image-item size-3 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353678/original_da4c60351927a5bfcc332167084f8738.png?1746002961?bc=0" alt="Image 18">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354628/original_ae680d66843b8bde0b8b19069dee98f0.jpg?1746006652?bc=0" alt="Image 18">
             </div>
-
             <div class="image-item size-4 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353689/original_71843bb6ad3d4de72a380fb667a84fd1.png?1746002986?bc=0" alt="Image 19">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354630/original_367f5c7b73ae69fe9b9d92d0e2ef7c60.jpg?1746006652?bc=0" alt="Image 19">
             </div>
             <div class="image-item size-1 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353698/original_34acd7493d96cbdd4f660d8368f708e8.png?1746003011?bc=0" alt="Image 20">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354632/original_23d27c4940423a9bda33805c3e5254da.jpg?1746006652?bc=0" alt="Image 20">
             </div>
             <div class="image-item size-2 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353688/original_7dd369fb9dbf408fedfceade30459a5a.png?1746002984?bc=0" alt="Image 21">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354623/original_57f0b3267367a52d384a6a40d73ff3d1.jpg?1746006651?bc=0" alt="Image 21">
             </div>
             <div class="image-item size-3 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353692/original_731cf4c029031dd68261dfa7581bc206.png?1746002993?bc=0" alt="Image 22">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354616/original_b0b96cdf9249da4ad4ba786a66d26a15.jpg?1746006651?bc=0" alt="Image 22">
             </div>
             <div class="image-item size-1 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353697/original_401c5daebd4a1ee39dba1621eb0fa25c.png?1746003010?bc=0" alt="Image 23">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354629/original_a1df0fec39f5da77758d8c426cdc4c59.jpg?1746006652?bc=0" alt="Image 23">
             </div>
             <div class="image-item size-4 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353695/original_65d57156666276244b22a7a37305e354.png?1746003006?bc=0" alt="Image 24">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354619/original_ae66ec4d91a8f3803b470048fe517d36.jpg?1746006651?bc=0" alt="Image 24">
             </div>
             <div class="image-item size-2 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353693/original_6227675d39b8c08f6c0ea9dfe6383fe5.png?1746002994?bc=0" alt="Image 25">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354610/original_0528aadbd5104d0ff89e9574647ff6d0.jpg?1746006650?bc=0" alt="Image 25">
             </div>
             <div class="image-item size-1 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36353686/original_bee07482c0f8936cc3aea75e1b6a2e80.png?1746002979?bc=0" alt="Image 26">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354625/original_e21d18c506d9434e01ee1671a88e4705.jpg?1746006652?bc=0" alt="Image 26">
             </div>
         </div>        
     </div>
