added locations - also footer is broken?

--- a/character.html
+++ b/character.html
@@ -69,7 +69,7 @@
                 How they did it
             </div>
             <div class="des" id="medium-body">
-                Storyline, character creation and arc. 
+                Storyline, Characters and Location
             </div>
         </div>
     </div>
@@ -545,9 +545,47 @@
                 </div>
             </div>
         </div>
-        </div>
-      </div>
+    </div>
 
+    <div class="line-break"></div>
+
+    <!-- locations -->
+    <div class="location">
+        <div class="content">
+            <div class="topic-row">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+                <div class="topic" id="h4">
+                    Locations
+                </div>
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+              </div>
+            <div class="title" id="h1">All the locations in arcane</div>
+    
+            <!-- location carousel only edit this-->
+            <div class="carousel">
+                <div class="slide">
+                    <div class="topic" id="h4">Piltover</div>
+                    <div class="image-row">
+                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910952/original_7ebb2617b527012f71bf19cf2f53f1bf.png?1744339313?bc=0" alt="" id="location-1">
+                        <div class="secondary-images">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690514/original_abf544c353a1c7575c7013aaa9d00a44.png?1743548958?bc=0" alt="">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028101/original_c063881be146af2e0ac0cc95a0e7e599.png?1744782617?bc=0" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="topic" id="h4">Zaun</div>
+                    <div class="image-row">
+                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690525/original_c81fc7a8d7b17c8d4bdd7badeb0e8042.jpg?1743548959?bc=0" alt="" id="location-1">
+                        <div class="secondary-images">
+                            <img src="https://i.namu.wiki/i/Vz2MwsbJqBdX6QKKG48hjit-16NsMSQOBHzkaT1FeLgfRE2IZlvVKjCYvWueauGXy9SORFcbNnr2bwPwy23KyA.webp" alt="">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690527/original_1c5d1b66702401d8dc5bc11170d27c58.png?1743548961?bc=0" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <div class="content">
