fixed spotify embed link

--- a/index.html
+++ b/index.html
@@ -127,13 +127,10 @@
             <div class="des" id="medium-body">
             Arcane has two main soundtracks, one for each of its two seasons. Season One features 11 vocal tracks, including the hit single “Enemy” by Imagine Dragons and JID. The Season Two soundtrack was released in 2024 to accompany the second season and has already surpassed 500 million streams globally, boosted in part by its growing popularity in the UK. These soundtracks are available on paid music platforms such as Spotify and Apple Music, as well as for free on YouTube.
             </div>
-            <div class="spotify-embed">
-                <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3KVUsNUmJc2?utm_source=generator&theme=0" 
-                    allow="encrypted-media" 
-                    loading="lazy">
-                </iframe>
-            </div>
         </div>
+    </div>
+    <div class="spotify">
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3KVUsNUmJc2?utm_source=generator&theme=0" width="70%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
     
     <!-- videos/content -->
