fixed gallery imgs

--- a/gallery.html
+++ b/gallery.html
@@ -77,89 +77,89 @@
     <div class="line-break"></div>
 
     <!-- image table -->
-    <div class="image-table">
-        <div class="image-grid">
-            <div class="image-item size-2 width-2">
+    <div class="gallery">
+        <div class="image-content">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028102/original_5f1a20b43ab384ba22a3a3699cf22b48.png?1744782620?bc=0" alt="Image 1">
             </div>
-            <div class="image-item size-4 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="Image 2">
+            <div class="slide">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910948/original_94f800a97096d5a9fbf90eb85ee93e7b.png?1744339311?bc=0" alt="Image 2" id="square">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910949/original_b198a74ae725cf1b56a65b8ad8445e50.png?1744339312?bc=0" alt="Image 3">
             </div>
-            <div class="image-item size-3 width-2">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776200/original_69c1cf4e18a0238c838cd0601e71ce3e.png?1743811557?bc=0" alt="Image 4">
+            <div class="slide">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776200/original_69c1cf4e18a0238c838cd0601e71ce3e.png?1743811557?bc=0" alt="Image 4" id="square">
             </div>
-            <div class="image-item size-2 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028096/original_b9062a8ec35c369ecd222fbad6008347.png?1744782609?bc=0" alt="Image 5">
             </div>
-            <div class="image-item size-3 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776197/original_fdd791a0b20e3727c9a8ad17ee7f7a60.png?1743811552?bc=0" alt="Image 6">
             </div>
-            <div class="image-item size-1 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910950/original_c1ef04628d347fd4f5ecc84db8acb1ed.png?1744339313?bc=0" alt="Image 7">
             </div>
-            <div class="image-item size-4 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690525/original_c81fc7a8d7b17c8d4bdd7badeb0e8042.jpg?1743548959?bc=0" alt="Image 8">
             </div>
-            <div class="image-item size-1 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690526/original_911021511bf22442ca33e14552d70e78.jpg?1743548960?bc=0" alt="Image 9">
+            <div class="slide">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690526/original_911021511bf22442ca33e14552d70e78.jpg?1743548960?bc=0" alt="Image 9" id="square">
             </div>
-            <div class="image-item size-3 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35776195/original_e7fa00e4d8db1625457f2e21742022fa.png?1743811550?bc=0" alt="Image 10">
             </div>
-            <div class="image-item size-2 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690528/original_17275e9e65cf0fff144e05bb2a84c8fd.jpg?1743548964?bc=0" alt="Image 11">
             </div>
-            <div class="image-item size-1 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690527/original_1c5d1b66702401d8dc5bc11170d27c58.png?1743548961?bc=0" alt="Image 12">
             </div>
-            <div class="image-item size-4 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690524/original_74a5119156be3c469fb5b979a6f6614e.jpg?1743548959?bc=0" alt="Image 13">
             </div>
-            <div class="image-item size-1 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354635/original_ed1fd3a7b1e429cf874a2f38c003ae46.jpg?1746006653?bc=0" alt="Image 14">
+            <div class="slide">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354635/original_ed1fd3a7b1e429cf874a2f38c003ae46.jpg?1746006653?bc=0" alt="Image 14" id="square">
             </div>
-            <div class="image-item size-2 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354631/original_8ce0452ff9640f8458e0cf36cd8f41bf.jpg?1746006652?bc=0" alt="Image 15">
             </div>
-            <div class="image-item size-3 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354633/original_74cf8adf090544dc01e1b655219153f1.jpg?1746006652?bc=0" alt="Image 16">
             </div>
-            <div class="image-item size-1 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354634/original_4e9402b52cb49ff52e0fad38a75b8a1e.jpg?1746006652?bc=0" alt="Image 17">
             </div>
-            <div class="image-item size-3 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354628/original_ae680d66843b8bde0b8b19069dee98f0.jpg?1746006652?bc=0" alt="Image 18">
             </div>
-            <div class="image-item size-4 width-1">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354630/original_367f5c7b73ae69fe9b9d92d0e2ef7c60.jpg?1746006652?bc=0" alt="Image 19">
+            <div class="slide">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354630/original_367f5c7b73ae69fe9b9d92d0e2ef7c60.jpg?1746006652?bc=0" alt="Image 19" id="square">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354632/original_23d27c4940423a9bda33805c3e5254da.jpg?1746006652?bc=0" alt="Image 20">
             </div>
-            <div class="image-item size-2 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354623/original_57f0b3267367a52d384a6a40d73ff3d1.jpg?1746006651?bc=0" alt="Image 21">
             </div>
-            <div class="image-item size-3 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354616/original_b0b96cdf9249da4ad4ba786a66d26a15.jpg?1746006651?bc=0" alt="Image 22">
             </div>
-            <div class="image-item size-1 width-2">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354629/original_a1df0fec39f5da77758d8c426cdc4c59.jpg?1746006652?bc=0" alt="Image 23">
             </div>
-            <div class="image-item size-4 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354619/original_ae66ec4d91a8f3803b470048fe517d36.jpg?1746006651?bc=0" alt="Image 24">
             </div>
-            <div class="image-item size-2 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354610/original_0528aadbd5104d0ff89e9574647ff6d0.jpg?1746006650?bc=0" alt="Image 25">
             </div>
-            <div class="image-item size-1 width-1">
+            <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354625/original_e21d18c506d9434e01ee1671a88e4705.jpg?1746006652?bc=0" alt="Image 26">
             </div>
-        </div>        
+        </div>
     </div>
-
+    
 
 
 
