down arrow turned into working button

--- a/character.html
+++ b/character.html
@@ -76,6 +76,16 @@
 
     <div class="line-break"></div>
 
+    <div class="down-arrow" onclick="window.scrollBy({ top: 850, behavior: 'smooth' });">
+        <img src="https://d2w9rnfcy7mm78.cloudfront.net/36504222/original_05fc080d3784198161f4f7ab38a9ce45.png?1746573715?bc=0" alt="">
+      </div>
+    </div>
+
+    <div class="down-arrow" id="arrow-hide">
+        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0 alt="">
+      </div>
+    </div>
+
     <div class="story">
         <div class="content">
             <div class="title" id="h1">
