--- a/index.html
+++ b/index.html
@@ -95,17 +95,14 @@
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
             </div>
             <div class="title" id="h1">Welcome to the world of Arcane!</div>
-            <div class="down-arrow"><img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0" alt=""></div>
+            <div class="down-arrow" onclick="window.scrollBy({ top: 500, behavior: 'smooth' });">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0" alt="">
+              </div>
         </div>
     </div>
 
     <!-- about -->
-    <div class="about">
-        <div class="topic-row">
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
-            <div class="topic" id="h4">What is Arcane?</div>
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
-        </div>
+    <div class="about" id="background">
         <div class="content" id="about-section">
             <div class="title" id="h1">About</div>
             <div class="des" id="medium-body">
